@@ -177,7 +177,7 @@
 #define PAR_EMULATOR_MODE 0x03
 # define EMULATOR_MODE_DEBUGWIRE 0x00
 # define EMULATOR_MODE_JTAG 0x01
-# define EMULATOR_MODE_UNKNOWN 0x02
+# define EMULATOR_MODE_HV 0x02	/* HVSP or PP mode of AVR Dragon */
 # define EMULATOR_MODE_SPI 0x03
 #define PAR_IREG 0x04
 #define PAR_BAUD_RATE 0x05
